--- a/test-output/index.html
+++ b/test-output/index.html
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationLanguages" class="method navigator-link" hash-for-method="VerifyAddLanguage">VerifyAddLanguage</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="com.maven.testng.VerifyQualificationMemberships" class="method navigator-link" hash-for-method="VerifyAddMemberships">VerifyAddMemberships</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
@@ -132,14 +132,14 @@
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.maven.testng.VerifyQualificationLanguages</span>
+              <span class="class-name">com.maven.testng.VerifyQualificationMemberships</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="VerifyAddLanguage">
-                  </a> <!-- VerifyAddLanguage -->
-                  <span class="method-name">VerifyAddLanguage</span>
+                  <a name="VerifyAddMemberships">
+                  </a> <!-- VerifyAddMemberships -->
+                  <span class="method-name">VerifyAddMemberships</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -179,7 +179,7 @@
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
     &lt;classes&gt;
       &lt;class name=&quot;com.maven.testng.VerifyLoginTest&quot;/&gt;
-      &lt;class name=&quot;com.maven.testng.VerifyQualificationLanguages&quot;/&gt;
+      &lt;class name=&quot;com.maven.testng.VerifyQualificationMemberships&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -223,20 +223,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLoginWithCorrectCredentials')
 data.setCell(0, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(0, 3, 4810);
+data.setCell(0, 3, 4689);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'verifyLoginErrorMessage')
-data.setCell(1, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(1, 3, 1272);
+data.setCell(1, 1, 'VerifyAddMemberships')
+data.setCell(1, 2, 'com.maven.testng.VerifyQualificationMemberships')
+data.setCell(1, 3, 2915);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'VerifyAddLanguage')
-data.setCell(2, 2, 'com.maven.testng.VerifyQualificationLanguages')
-data.setCell(2, 3, 1028);
+data.setCell(2, 1, 'verifyLoginErrorMessage')
+data.setCell(2, 2, 'com.maven.testng.VerifyLoginTest')
+data.setCell(2, 3, 1358);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 7 seconds</span>
+              <span class="suite-total-time">Total running time: 8 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -269,29 +269,25 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginErrorMessage</span>
-                <span class="method-start">4300 ms</span>
+                <span class="method-start">4558 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithCorrectCredentials</span>
-                <span class="method-start">5575 ms</span>
+                <span class="method-start">5919 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
-              <div class="chronological-class-name">com.maven.testng.VerifyQualificationLanguages</div> <!-- chronological-class-name -->
-              <div class="configuration-class before">
-                <span class="method-name">navigate</span>
-                <span class="method-start">10387 ms</span>
-              </div> <!-- configuration-class before -->
+              <div class="chronological-class-name">com.maven.testng.VerifyQualificationMemberships</div> <!-- chronological-class-name -->
               <div class="test-method">
-                <span class="method-name">VerifyAddLanguage</span>
-                <span class="method-start">13372 ms</span>
+                <span class="method-name">VerifyAddMemberships</span>
+                <span class="method-start">10610 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">14401 ms</span>
+                <span class="method-start">13525 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
