--- a/test-output/old/Suite/methods-alphabetical.html
+++ b/test-output/old/Suite/methods-alphabetical.html
@@ -1,16 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="658a60">  <td>21/08/07 20:15:31</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationLanguages.VerifyAddLanguage()[pri:0, instance:com.maven.testng.VerifyQualificationLanguages@49d3c823]">VerifyAddLanguage</td> 
-  <td>main@1631227617</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/07 20:15:32</td>   <td>1030</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@906d29b]">&lt;&lt;closeBrowser</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1631227617</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/07 20:15:18</td>   <td>-13366</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@906d29b]">&gt;&gt;getURL</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1631227617</td>   <td></td> </tr>
-<tr bgcolor="658a60">  <td>21/08/07 20:15:28</td>   <td>-2985</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;VerifyQualificationLanguages.navigate()[pri:0, instance:com.maven.testng.VerifyQualificationLanguages@49d3c823]">&gt;&gt;navigate</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1631227617</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/07 20:15:22</td>   <td>-9072</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@906d29b]">verifyLoginErrorMessage</td> 
-  <td>main@1631227617</td>   <td></td> </tr>
-<tr bgcolor="b46fba">  <td>21/08/07 20:15:23</td>   <td>-7797</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@906d29b]">verifyLoginWithCorrectCredentials</td> 
-  <td>main@1631227617</td>   <td></td> </tr>
+<tr bgcolor="658a60">  <td>21/08/08 10:29:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyQualificationMemberships.VerifyAddMemberships()[pri:0, instance:com.maven.testng.VerifyQualificationMemberships@906d29b]">VerifyAddMemberships</td> 
+  <td>main@69062746</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/08 10:29:28</td>   <td>2916</td> <td>&nbsp;</td><td title="&lt;&lt;VerifyLoginTest.closeBrowser()[pri:0, instance:com.maven.testng.VerifyLoginTest@ebaa6cb]">&lt;&lt;closeBrowser</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@69062746</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/08 10:29:14</td>   <td>-10603</td> <td>&nbsp;</td><td title="&gt;&gt;VerifyLoginTest.getURL()[pri:0, instance:com.maven.testng.VerifyLoginTest@ebaa6cb]">&gt;&gt;getURL</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@69062746</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/08 10:29:19</td>   <td>-6052</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginErrorMessage()[pri:1, instance:com.maven.testng.VerifyLoginTest@ebaa6cb]">verifyLoginErrorMessage</td> 
+  <td>main@69062746</td>   <td></td> </tr>
+<tr bgcolor="b46fba">  <td>21/08/08 10:29:20</td>   <td>-4691</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="VerifyLoginTest.verifyLoginWithCorrectCredentials()[pri:2, instance:com.maven.testng.VerifyLoginTest@ebaa6cb]">verifyLoginWithCorrectCredentials</td> 
+  <td>main@69062746</td>   <td></td> </tr>
 </table>
