--- a/test-output/index.html
+++ b/test-output/index.html
@@ -223,20 +223,20 @@ data.addRows(3);
 data.setCell(0, 0, 0)
 data.setCell(0, 1, 'verifyLoginWithCorrectCredentials')
 data.setCell(0, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(0, 3, 4689);
+data.setCell(0, 3, 5113);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'VerifyAddMemberships')
-data.setCell(1, 2, 'com.maven.testng.VerifyQualificationMemberships')
-data.setCell(1, 3, 2915);
+data.setCell(1, 1, 'verifyLoginErrorMessage')
+data.setCell(1, 2, 'com.maven.testng.VerifyLoginTest')
+data.setCell(1, 3, 1578);
 data.setCell(2, 0, 2)
-data.setCell(2, 1, 'verifyLoginErrorMessage')
-data.setCell(2, 2, 'com.maven.testng.VerifyLoginTest')
-data.setCell(2, 3, 1358);
+data.setCell(2, 1, 'VerifyAddMemberships')
+data.setCell(2, 2, 'com.maven.testng.VerifyQualificationMemberships')
+data.setCell(2, 3, 1102);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 8 seconds</span>
+              <span class="suite-total-time">Total running time: 7 seconds</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -269,25 +269,29 @@ return data;
               </div> <!-- configuration-test before -->
               <div class="test-method">
                 <span class="method-name">verifyLoginErrorMessage</span>
-                <span class="method-start">4558 ms</span>
+                <span class="method-start">4449 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
                 <span class="method-name">verifyLoginWithCorrectCredentials</span>
-                <span class="method-start">5919 ms</span>
+                <span class="method-start">6030 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyQualificationMemberships</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">navigate</span>
+                <span class="method-start">11145 ms</span>
+              </div> <!-- configuration-class before -->
               <div class="test-method">
                 <span class="method-name">VerifyAddMemberships</span>
-                <span class="method-start">10610 ms</span>
+                <span class="method-start">14132 ms</span>
               </div> <!-- test-method -->
             </div> <!-- chronological-class -->
             <div class="chronological-class">
               <div class="chronological-class-name">com.maven.testng.VerifyLoginTest</div> <!-- chronological-class-name -->
               <div class="configuration-test after">
                 <span class="method-name">closeBrowser</span>
-                <span class="method-start">13525 ms</span>
+                <span class="method-start">15235 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
